# pysnow

./: .gitignore  CLAUDE_NOTES.md  LICENSE  PUSH_INSTRUCTIONS.md  README.md  pyproject.toml
docs/: CLM_SNOW_TUNING_SUMMARY.md  PYSNOW_DOCUMENTATION.md  SESSION_SUMMARY_2025-01-11.md
examples/: run_comparison.py
pysnow/: __init__.py  albedo.py  compaction.py  constants.py  model.py  radiation.py  rain_snow.py  thermal.py  turbulent.py
scripts/: comprehensive_snotel_test_v2.py  diagnose_early_season.py  diagnose_energy_balance.py  generate_maps_only.py  run_comparison.py  run_snotel_site.py
